# quant-ai

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  docker-compose.yml  package.json  pnpm-lock.yaml
server/: .env.example  Dockerfile  mypy.ini  pyproject.toml  requirements.txt  ruff.toml
server/migrations/: env.py
server/migrations/versions/: 001_init.py  2bd6ef42baa5_add_fundamentals_backtests_alerts.py  2fd754769a6f_init.py  46ef13493fcc_add_stock_daily_prices_and_indicators.py  49079679cb0d_add_research_reports_and_notices.py  4a3f2e1b8c9d_mvp_event_factor_core.py  6568642d9a6b_add_users_and_user_id_columns.py  7bd72a2c279c_add_paper_trading_tables.py  83b62059c768_add_notification_tables.py  907cfd0caa9f_add_screener_templates.py  a1b2c3d4e5f6_add_channels_sectors_builtin.py  dd742f2e93bd_add_collection_jobs_table.py  ef1a2b3c4d5e_add_system_logs_table.py  f1a2b3c4d5e6_add_category_to_event_sources.py  g2h3i4j5k6l7_add_data_source_to_channels.py  h3i4j5k6l7m8_add_channel_id_to_event_jobs.py  i4j5k6l7m8n9_drop_provider_from_data_channels.py  j5k6l7m8n9o0_add_source_channel_links.py
server/src/: main.py  seed_builtin_strategies.py  seed_data_defaults.py  seed_event_defaults.py  seed_stocks.py
server/src/api/: ai.py  auth.py  channels.py  collection.py  common.py  dashboard.py  data_channels.py  deps.py  events.py  factor_snapshots.py  news.py  notifications.py  paper.py  portfolio.py  quant.py  research.py  screener.py  sectors.py  seed.py  stocks.py  strategies.py  system_logs.py  ws.py
server/src/core/: config.py  docs_auth.py  exceptions.py  middleware.py
server/src/models/: crud.py  database.py  models.py
server/tests/: conftest.py
(+319 files in other folders)
