[project]
name = "quant-ai-server"
version = "0.1.0"
description = "Quant AI backend API"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "sqlalchemy",
    "psycopg2-binary",
    "redis",
    "akshare",
    "yfinance",
    "pandas",
    "numpy",
    "python-dotenv",
    "pydantic",
    "pydantic-settings",
    "httpx",
    "websockets",
    "alembic",
    "apscheduler",
    "requests",
    "bcrypt",
    "pyjwt",
    "langchain>=0.3.0",
    "langchain-openai>=0.2.0",
    "langgraph>=0.2.0",
    "jsonschema",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
    "mypy",
    "types-requests",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --tb=short --strict-markers"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long
    "B008",  # function call in argument
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.11"
warn_return_any = false
warn_unused_configs = false
ignore_missing_imports = true
implicit_optional = true
check_untyped_defs = false
exclude = ["migrations/"]

[[tool.mypy.overrides]]
module = "src.models.*"
ignore_errors = true
